<resources>
    <string name="app_name">Idle Daddy</string>
    <string name="status">Status</string>
    <string name="logged_in">Logged in</string>
    <string name="tap_to_login">Tap here to log in</string>
    <string name="login_to_steam">Log in to Steam</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="steamguard">Steam Guard code</string>
    <string name="login">Login</string>
    <string name="login_with_qr">Sign in with QR code</string>
    <string name="login_with_password">Sign in with password</string>
    <string name="qr_login_instructions">Scan this code with the Steam Mobile App to sign in</string>
    <string name="qr_login_failed">QR sign in failed. Please try again</string>
    <string name="retry">Retry</string>
    <string name="device_confirmation_prompt">Check your Steam Mobile App to approve the login</string>
    <string name="start_idling">Start farming</string>
    <string name="desc_start">Idle your games until all trading cards have dropped.</string>
    <string name="stop_idling">Stop Service</string>
    <string name="desc_stop">Stop the Steam service and quit the app.</string>
    <string name="idling_finished">No games left to idle.</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="redeem">Activate Product</string>
    <string name="redeem_msg">Enter a product code or free game ID</string>
    <string name="ok">OK</string>
    <string name="cat_idle">Card Farming</string>
    <string name="cat_general">General</string>
    <string name="pref_offline">Offline Farming</string>
    <string name="sum_offline">Sets your status as \'Offline\' so your friends won\'t see you idling.</string>
    <string name="pref_stay_awake">Keep Device Awake</string>
    <string name="sum_stay_awake">Enable this if Idle Daddy stops working when the screen is off. WARNING: Some devices may automatically kill the app after a short period if this option is enabled.</string>
    <string name="pref_minimize_data">Minimize Data Usage</string>
    <string name="sum_minimize_data">Disable downloading images.</string>
    <string name="pref_parental_pin">Parental PIN</string>
    <string name="sum_parental_pin">Enter your parental PIN to unlock Family View.</string>
    <string name="pref_blacklist">Blacklist</string>
    <string name="sum_blacklist">Blacklist games you don\'t want to farm.</string>
    <string name="pref_hours_until">Hours Until Card Drops</string>
    <string name="sum_hours_until">The number of hours it takes for games to start dropping cards. While farming, Idle Daddy will idle multiple games simultaneously until they reach this number. For most users, 3 hours is the best choice here.</string>
    <string name="pref_include_free_games">Include Played Free Games</string>
    <string name="sum_include_free_games">By default, free games like Team Fortress 2 are excluded (as technically everyone owns them). If this option is enabled, they will be listed if the player has played them at some point.</string>
    <string name="pref_language">Language</string>
    <string name="sum_language">Change the app\'s language (Requires restart).</string>
    <string name="pref_gdpr_consent">Revoke GDPR Consent</string>
    <string name="sum_gdpr_consent">Under the EU\'s General Data Protection Regulation (GDPR), a user\'s consent is required before displaying ads. Click here to revoke your consent.</string>
    <string name="pref_use_custom_loginid">Use Custom Login ID</string>
    <string name="sum_use_custom_loginid">Enabling this option will allow you to run other SteamKit apps (such as Ice Client) at the same time as Idle Daddy. If unsure, leave this off. (Requires restart)</string>
    <string name="gdpr_consent_not_needed">Not needed. Idle Daddy Premium doesn\'t display ads.</string>
    <string name="blacklist_hint">Enter an appid and click +</string>
    <string name="add_to_blacklist">Add game to blacklist</string>
    <string name="added_to_blacklist">Game added to blacklist</string>
    <string name="remove_from_blacklist">Remove game from blacklist</string>
    <string name="removed_from_blacklist">Game removed from blacklist</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="home">Home</string>
    <string name="games">Games</string>
    <string name="no_games_found">Couldn\'t retrieve the list of games.</string>
    <string name="now_playing">Now playing</string>
    <string name="error_not_logged_in">You must be logged in to Steam</string>
    <string name="invalid_password">Invalid password</string>
    <string name="steamguard_required">Steam Guard code required</string>
    <string name="invalid_code">Invalid code</string>
    <string name="timeout_error">Connection timed out. Please try again</string>
    <string name="login_failed">Login failed. Please try again</string>
    <string name="channel_name">Idle Daddy notifications</string>
    <string name="now_playing2">Now playing %s</string>
    <string name="product_already_owned">Product already owned</string>
    <string name="invalid_key">Invalid key</string>
    <string name="activation_failed">Activation failed</string>
    <plurals name="games_left">
        <item quantity="one">%d game left to idle</item>
        <item quantity="other">%d games left to idle</item>
    </plurals>
    <plurals name="card_drops_remaining">
        <item quantity="one">%d card drop remaining</item>
        <item quantity="other">%d card drops remaining</item>
    </plurals>
    <plurals name="hours_on_record">
        <item quantity="one">%.1f hr on record</item>
        <item quantity="other">%.1f hrs on record</item>
    </plurals>
    <string name="logged_in_elsewhere">Steam in use. Will resume when possible.</string>
    <string name="web_login_failed">Failed to log in to Steam website!</string>
    <string name="login_key_expired">Login key expired!</string>
    <string name="stopped">Stopped</string>
    <string name="paused">Paused</string>
    <string name="idling_multiple">Idling multiple</string>
    <string name="logged_out">Logged out</string>
    <string name="about">About</string>
    <string name="source_code">Source code (fork)</string>
    <string name="steam_group">Steam group</string>
    <string name="about_license">Idle Daddy\nCopyright © 2017-2018  Steev\'s apps\n\nThis program is free software: you can redistribute it and/or modify\nit under the terms of the GNU General Public License as published by\nthe Free Software Foundation, either version 3 of the License, or\n(at your option) any later version.\n\nThis program is distributed in the hope that it will be useful,\nbut WITHOUT ANY WARRANTY; without even the implied warranty of\nMERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the\nGNU General Public License for more details.\n\nYou should have received a copy of the GNU General Public License\nalong with this program.  If not, see &lt;http://www.gnu.org/licenses&gt;.</string>
    <string name="stop">Stop</string>
    <string name="skip">Skip</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="activated">Activated: %s</string>
    <string name="refresh">Refresh</string>
    <string name="last_session">Last Session</string>
    <string name="play_all">Play all</string>
    <string name="remove_ads">Remove ads</string>
    <string name="logcat">Send log</string>
    <string name="sort">Sort</string>
    <string name="sort_alphabetically">Alphabetically</string>
    <string name="sort_hours_played">Hours Played</string>
    <string name="sort_hours_played_reversed">Hours Played (reversed)</string>
    <string name="auto_discovery_title">Auto Discovery Queue</string>
    <string name="auto_discovery">This will automatically view the games in your Discovery Queue. During the Summer and Winter sales, you can get up to 3 trading cards per day by viewing your queue.</string>
    <string name="generating_discovery">Generating new Discovery Queue…</string>
    <string name="discovering">Discovering %s (%d/%d)</string>
    <string name="discovery_finished">Discovery Queue Finished</string>
    <string name="discovery_error">Could not complete the Discovery Queue at this time. Try again later</string>
    <string name="auto_vote">Auto Vote (Steam Awards)</string>
    <string name="vote_successful">Vote successful!</string>
    <string name="vote_failed">Vote failed!</string>
    <string name="summer_event">Summer Event</string>
    <string name="play_saliens">Play Saliens for trading cards</string>
    <string name="play_saliens_indefinitely">Play Saliens Indefinitely</string>
    <string name="play_saliens_desc">You can earn up to 3 trading cards each day by playing the Summer Salien game. This event ends on July 5th.</string>
    <string name="playing_saliens">Playing Saliens (%d/%d)…</string>
    <string name="playing_saliens_indefinitely">Playing Saliens…\nScore: %s/%s\nLevel: %s</string>
    <string name="next_round_countdown">Next round: %02d:%02d</string>
    <string name="boss_hp">Boss HP: %d</string>
    <string name="reporting_score">Reporting score…</string>
    <string name="success_check_inventory">Success! Check your inventory for new trading cards.</string>
    <string name="play_saliens_failed">Unable to auto play Saliens right now. Try again later.</string>
    <string name="apikey_access_denied">Steam API key access denied, using a built-in key.</string>
    <string name="apikey_register_failed">Failed to register an API key, using a built-in key.</string>
    <string name="english">English</string>
    <string name="german">German</string>
    <string name="russian">Russian</string>
    <string name="portuguese_eu">Portuguese (European)</string>
    <string name="portuguese_br">Portuguese (Brazilian)</string>
    <string name="ukrainian">Ukrainian</string>
    <string name="czech">Czech</string>
    <string name="polish">Polish</string>
    <string name="turkish">Turkish</string>
    <string name="thai">Thai</string>
    <string name="chinese_simple">Chinese (Simplified)</string>
    <string name="chinese_traditional">Chinese (Traditional)</string>
    <string name="bulgarian">Bulgarian</string>
    <string name="slovenian">Slovenian</string>
    <string name="french">French</string>
    <string name="romanian">Romanian</string>
    <string name="spanish">Spanish</string>
    <string name="arabic">Arabic</string>
    <string name="hebrew">Hebrew</string>
    <string name="indonesian">Indonesian</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="persian">Persian</string>
    <string name="bosnian_croatian">Bosnian/Croatian</string>
    <string name="serbian">Serbian</string>
    <string name="language_changed">You must restart the application for the language to be updated.</string>
    <string name="service_started">Steam Service Started</string>
    <string name="idle_custom_app">Idle Hidden/Non-Steam Game</string>
    <string name="hidden_appid">Hidden appid</string>
    <string name="non_steam_game">Non-Steam game</string>
    <string name="playing_unknown_app">Unknown app: %d</string>
    <string name="playing_non_steam_game">Non-Steam game: %s</string>
    <string name="spring_cleaning_title">Spring Cleaning Event</string>
    <string name="spring_cleaning_desc">Complete tasks to level up your Spring Cleaning Event badge. This event ends May 28th.</string>
    <string name="shared_secret_desc">Import the \'shared_secret\' code from your mobile authenticator. This allows Idle Daddy to automatically log in again when the login key expires.</string>
    <string name="import_shared_secret">Import shared_secret</string>
    <string name="enter_manually">Enter manually</string>
</resources>