<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/cat_general"
        app:iconSpaceReserved="false">
        <SwitchPreference
            android:defaultValue="false"
            android:key="minimize_data"
            android:summary="@string/sum_minimize_data"
            android:title="@string/pref_minimize_data"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="stay_awake"
            android:summary="@string/sum_stay_awake"
            android:title="@string/pref_stay_awake"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="include_free_games"
            android:summary="@string/sum_include_free_games"
            android:title="@string/pref_include_free_games"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="use_custom_loginid"
            android:summary="@string/sum_use_custom_loginid"
            android:title="@string/pref_use_custom_loginid"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            android:key="parental_pin"
            android:summary="@string/sum_parental_pin"
            android:title="@string/pref_parental_pin"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:entries="@array/language_options"
            android:entryValues="@array/language_option_values"
            android:key="language"
            android:summary="@string/sum_language"
            android:title="@string/pref_language"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="gdpr_consent"
            android:summary="@string/sum_gdpr_consent"
            android:title="@string/pref_gdpr_consent"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/cat_idle"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:defaultValue="false"
            android:key="offline"
            android:summary="@string/sum_offline"
            android:title="@string/pref_offline"
            app:iconSpaceReserved="false" />

        <com.steevsapps.idledaddy.preferences.NumPickerPreference
            android:defaultValue="3"
            android:key="hours_until_drops"
            android:summary="@string/sum_hours_until"
            android:title="@string/pref_hours_until"
            app:iconSpaceReserved="false" />

        <com.steevsapps.idledaddy.preferences.BlacklistPreference
            android:defaultValue=""
            android:key="blacklist"
            android:summary="@string/sum_blacklist"
            android:title="@string/pref_blacklist"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

</PreferenceScreen>