<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        style="@style/AppTheme.TextStyle.Secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shared_secret_desc" />

    <TextView
        android:id="@+id/status"
        style="@style/AppTheme.TextStyle.Secondary.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textIsSelectable="true"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_shared_secret"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/import_shared_secret" />

    <Button
        android:id="@+id/btn_enter_manually"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_manually" />

</LinearLayout>