<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        style="@style/AppTheme.TextStyle.Secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_saliens_desc" />

    <TextView
        android:id="@+id/status"
        style="@style/AppTheme.TextStyle.Secondary.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/countdown"
        style="@style/AppTheme.TextStyle.Secondary.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_play_saliens"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/play_saliens" />

    <Button
        android:id="@+id/btn_play_saliens_full"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_saliens_indefinitely" />
</LinearLayout>